<resources>
    <string name="app_name">StudentSpecificProductivityApp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_to_the_app">New to the app?</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="view_course_schedule">View Course Schedule</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="study">Study</string>
    <string name="sleep_tracker">Sleep Tracker</string>
    <string name="to_do_list">To-Do List</string>
    <string name="left_arrow"><![CDATA[<-]]></string>
    <string name="right_arrow"><![CDATA[->]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="set_sleep_time">Set Sleep Time</string>
    <string name="set_wake_time">Set Wake Time</string>
    <string name="save">Save</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="subject_e_g_math_biology">Subject (e.g., Math, Biology)</string>
    <string name="study_timer">Study Timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="study_history">Study History</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description (Optional)</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="change_email">Change Email</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="subject">Subject</string>
    <string name="course_schedule">Course Schedule</string>
    <string name="music_player">Music Player</string>
    <string name="select_a_date">Select a Date</string>
    <string name="account">Account</string>
    <string name="apply">Apply</string>
    <string name="appearance">Appearance</string>
    <string name="duration_8h_00m">Duration: 8h 00m</string>
    <string name="wake_time_6_00_am">Wake Time: 6:00 AM</string>
    <string name="sleep_time_10_00_pm">Sleep Time: 10:00 PM</string>
    <string name="event_name">Event Name</string>
    <string name="_10_00">10:00</string>
    <string name="comp_2160">COMP 2160</string>
    <string name="mobile_programming">Mobile Programming</string>
    <string name="days_of_the_week">Days of the Week:</string>
    <string name="course_hours">Course Hours:</string>
    <string name="course_name">Course Name:</string>
    <string name="course_code">Course Code:</string>
</resources>