<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/home_title"
        android:textColor="@color/primaryText"
        />

    <Button
        android:id="@+id/courseScheduleButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:text="@string/view_course_schedule"
        android:backgroundTint="@color/primaryBtn"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/weeklyPlanButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:text="@string/weekly_plan"
        android:backgroundTint="@color/primaryBtn"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/studyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:text="@string/study"
        android:backgroundTint="@color/primaryBtn"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/sleepTrackerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
        android:text="@string/sleep_tracker"
        android:backgroundTint="@color/primaryBtn"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/toDoListButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:text="@string/to_do_list"
        android:backgroundTint="@color/primaryBtn"
        android:textColor="@color/white"
        />


</FrameLayout>