<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/createAccountImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/createAccountEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/createAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/create_account" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alreadyHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/signInRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/blue"
            android:text="@string/sign_in" />
    </LinearLayout>
</LinearLayout>