<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyFragment"
    android:background="@color/background"
    android:paddingBottom="110dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_timer"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_margin="20dp"
                android:src="@drawable/ic_study_timer"/>

            <EditText
                android:id="@+id/subjectInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_e_g_math_biology" />

            <EditText
                android:id="@+id/notesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_optional"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/timerDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_00"
                android:textSize="48sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/startBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/primaryBtn"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/stopBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:enabled="false"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_history"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/primaryText"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStudy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
    </LinearLayout>

</FrameLayout>
