<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:text="@string/course_code"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:text="@string/course_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:text="@string/days_of_the_week"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                android:text="@string/course_hours"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/courseIDTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryText"
                android:text="@string/comp_2160"/>

            <TextView
                android:id="@+id/courseNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryText"
                android:text="@string/mobile_programming"/>

            <TextView
                android:id="@+id/courseDaysTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryText"
                android:text=""/>

            <TextView
                android:id="@+id/courseHoursTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryText"
                android:text=""/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/courseScheduleDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/secondaryBtn"
            android:gravity="center"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>