<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_margin="10dp"
    android:elevation="4dp"
    tools:context=".StudyFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="14dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/studySubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="18sp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/studyDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/studyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/studyNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/deleteStudyBtn"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:text="Delete"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:backgroundTint="@color/secondaryBtn"/>
    </LinearLayout>

</LinearLayout>
