<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sleepRecord"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:gravity="center"
    android:elevation="4dp"
    tools:context=".CreateAccountActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center_vertical">

                <TextView
                    android:id="@+id/sleepTime"
                    android:text="@string/sleep_time_10_00_pm"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryText"
                    android:layout_marginBottom="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/wakeTime"
                    android:text="@string/wake_time_6_00_am"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryText"
                    android:layout_marginBottom="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/durationTime"
                    android:text="@string/duration_8h_00m"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="90dp"
                    android:layout_height="38dp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:backgroundTint="@color/secondaryBtn"/>
        </LinearLayout>

</LinearLayout>
