<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SleepTrackerFragment"
    android:layout_marginBottom="15sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_sleep_tracker"/>

        <Button
            android:id="@+id/setSleepBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/set_sleep_time" />

        <Button
            android:id="@+id/setWakeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_wake_time" />

        <Button
            android:id="@+id/saveSleepBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="8dp"/>

    </LinearLayout>


</FrameLayout>